--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoincore-sq-0.16.1-linux"
+name: "bitcoin-cored-0.16.1-linux"
 enable_cache: true
 suites:
 - "xenial"
@@ -35,7 +35,7 @@ packages:
 - "libstdc++6:i386"
 remotes:
 - "url": "https://github.com/bitcoin-cored/bitcoin-cored.git"
-  "dir": "bitcoincore"
+  "dir": "bitcoin-cored"
 files: []
 script: |
 
@@ -119,7 +119,7 @@ script: |
   chmod +x ${WRAP_DIR}/${prog}
   done
 
-  cd bitcoincore
+  cd bitcoin-cored
   BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
   for i in $HOSTS; do
@@ -141,13 +141,13 @@ script: |
   ./autogen.sh
   CONFIG_SITE=${BASEPREFIX}/`echo "${HOSTS}" | awk '{print $1;}'`/share/config.site ./configure --prefix=/
   make dist
-  SOURCEDIST=`echo bitcoincore-sq-*.tar.gz`
+  SOURCEDIST=`echo bitcoin-cored-*.tar.gz`
   DISTNAME=`echo ${SOURCEDIST} | sed 's/.tar.*//'`
   # Correct tar file order
   mkdir -p temp
   pushd temp
   tar xf ../$SOURCEDIST
-  find bitcoincore-sq-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
+  find bitcoin-cored-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
   popd
 
   ORIGPATH="$PATH"
