--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoincore-sq-0.16.1-osx"
+name: "bitcoin-cored-0.16.1-osx"
 enable_cache: true
 suites:
 - "xenial"
@@ -29,7 +29,8 @@ packages:
 - "fonts-tuffy"
 remotes:
 - "url": "https://github.com/bitcoin-cored/bitcoin-cored.git"
-  "dir": "bitcoincore"
+  "dir": "bitcoin-cored"
+  "commit": ""
 files:
 - "MacOSX10.11.sdk.tar.gz"
 script: |
@@ -83,7 +84,7 @@ script: |
   create_per-host_faketime_wrappers "2000-01-01 12:00:00"
   export PATH=${WRAP_DIR}:${PATH}
 
-  cd bitcoincore
+  cd bitcoin-cored
   BASEPREFIX=`pwd`/depends
 
   mkdir -p ${BASEPREFIX}/SDKs
@@ -104,14 +105,14 @@ script: |
   ./autogen.sh
   CONFIG_SITE=${BASEPREFIX}/`echo "${HOSTS}" | awk '{print $1;}'`/share/config.site ./configure --prefix=/
   make dist
-  SOURCEDIST=`echo bitcoincore-sq-*.tar.gz`
+  SOURCEDIST=`echo bitcoin-cored-*.tar.gz`
   DISTNAME=`echo ${SOURCEDIST} | sed 's/.tar.*//'`
 
   # Correct tar file order
   mkdir -p temp
   pushd temp
   tar xf ../$SOURCEDIST
-  find bitcoincore-sq-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
+  find bitcoin-cored-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
   popd
 
   ORIGPATH="$PATH"
