--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoincore-sq-0.16.1-win"
+name: "bitcoin-cored-0.16.1-win"
 enable_cache: true
 suites:
 - "xenial"
@@ -32,7 +32,8 @@ alternatives:
   "path" : "/usr/bin/x86_64-w64-mingw32-g++-posix"
 remotes:
 - "url": "https://github.com/bitcoin-cored/bitcoin-cored.git"
-  "dir": "bitcoincore"
+  "dir": "bitcoin-cored"
+  "commit": ""
 files: []
 script: |
   WRAP_DIR=$HOME/wrapped
@@ -110,7 +111,7 @@ script: |
   create_per-host_linker_wrapper "2000-01-01 12:00:00"
   export PATH=${WRAP_DIR}:${PATH}
 
-  cd bitcoincore
+  cd bitcoin-cored
   BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
   for i in $HOSTS; do
@@ -128,14 +129,14 @@ script: |
   ./autogen.sh
   CONFIG_SITE=${BASEPREFIX}/`echo "${HOSTS}" | awk '{print $1;}'`/share/config.site ./configure --prefix=/
   make dist
-  SOURCEDIST=`echo bitcoincore-sq-*.tar.gz`
+  SOURCEDIST=`echo bitcoin-cored-*.tar.gz`
   DISTNAME=`echo ${SOURCEDIST} | sed 's/.tar.*//'`
 
   # Correct tar file order
   mkdir -p temp
   pushd temp
   tar xf ../$SOURCEDIST
-  find bitcoincore-sq-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
+  find bitcoin-cored-* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
   mkdir -p $OUTDIR/src
   cp ../$SOURCEDIST $OUTDIR/src
   popd
@@ -155,7 +156,7 @@ script: |
     make ${MAKEOPTS} -C src check-security
     make deploy
     make install DESTDIR=${INSTALLPATH}
-    cp -f bitcoincore-sq-*setup*.exe $OUTDIR/
+    cp -f bitcoin-cored-*setup*.exe $OUTDIR/
     cd installed
     mv ${DISTNAME}/bin/*.dll ${DISTNAME}/lib/
     find . -name "lib*.la" -delete
