--- a/contrib/debian/clashic-qt.desktop
+++ b/contrib/debian/clashic-qt.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Bitcoin Clashic ABCD
-Comment=Connect to the Bitcoin P2P Network
-Comment[de]=Verbinde mit dem Bitcoin peer-to-peer Netzwerk
+Name=Bitcoin Core Sq
+Comment=Connect to the Bitcoin Core P2P Network
+Comment[de]=Verbinde mit dem Bitcoin Core peer-to-peer Netzwerk
 Comment[fr]=Bitcoin, monnaie virtuelle cryptographique pair à pair
 Comment[tr]=Bitcoin, eşten eşe kriptografik sanal para birimi
 Exec=clashic-qt %u
 Terminal=false
 Type=Application
 Icon=bitcoin128
-MimeType=x-scheme-handler/bitcoinclashic;
+MimeType=x-scheme-handler/bitcoincore;
 Categories=Office;Finance;
